chore: migrate to angular 20

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/input-tags/input-tags.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/input-tags/input-tags.html
@@ -12,9 +12,9 @@
 				{{ tag }}
 			</nz-auto-option>
 		</nz-autocomplete>
-		<nz-button-group>
+		<nz-space-compact>
 			<button type="button" nz-button nzType="primary" [disabled]="!inputTagValid" (click)="addItem()"><i nz-icon
 					nzType="plus"></i></button>
-		</nz-button-group>
+		</nz-space-compact>
 	</div>
 </ng-template>
