--- a/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.html
@@ -19,7 +19,7 @@
 <nz-list nzSize="small" class="list">
     <nz-list-item *ngFor="let stepName of filteredStepNames" [ngStyle]="lineStyle(stepName)">
         {{stepName}}
-        <nz-button-group>
+        <nz-space-compact>
             <button type="button" nz-button nzSize="small" [nzGhost]="true" title="Go to subtask"
                 *ngIf="resolution.steps[stepName].action.type === 'subtask' && resolution.steps[stepName].output?.id"
                 [routerLink]="[options.routingTaskPath, resolution.steps[stepName].output.id]"
@@ -42,6 +42,6 @@
                 nzTooltipTitle="Edit step" nz-tooltip
                 (click)="updateStep(resolution.steps[stepName]); $event.stopPropagation();"><i nz-icon
                     nzType="form"></i></button>
-        </nz-button-group>
+        </nz-space-compact>
     </nz-list-item>
 </nz-list>
